Faktor 1 der Formel

--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,24 @@
 <html>
 <body>
 
-<h1>My First JavaScript</h1>
+<h1>Einfluss auf Inflation berechnen.</h1>
 
-<button type="button" onclick="myFunction()">Click me to display Date and Time.</button>
+<h3>Offizielle Gewichte der Gueterkategorien:</h3>
+<p id="offizielleGewichte"></p>
+<h3>Persoenliche Gewichte der Gueterkategorien:</h3>
+<p id="persönlicheGewichte"></p>
+<h3>allgemeine Inflationsrate:</h3>
+<p id="allgemeineInflationsrate"></p>
+<h3>Inflationsraten:</h3>
+<p id="Inflationsraten"></p>
+<button type="button" onclick="myFunction()">Werte anzeigen.</button>
 
-<p id="demo"></p>
+<h3>Einfluss der Gewichte (Faktor 1 der Formel):</h3>
+<p id="EinflussGewichte"></p>
+<button type="button" onclick="Faktor1()">Einfluss der Gewichte berechnen.</button>
+
+
+
 
 <script src="app.js"></script>
 </body>
