Berechnung des Einflusses (beide Faktoren) hinzugefügt

--- a/app/index.html
+++ b/app/index.html
@@ -4,19 +4,23 @@
 
 <h1>Einfluss auf Inflation berechnen.</h1>
 
-<h3>Offizielle Gewichte der Gueterkategorien:</h3>
+<h3>offizielle Gewichte der Gueterkategorien:</h3>
 <p id="offizielleGewichte"></p>
-<h3>Persoenliche Gewichte der Gueterkategorien:</h3>
+<h3>persoenliche Gewichte der Gueterkategorien:</h3>
 <p id="persönlicheGewichte"></p>
-<h3>allgemeine Inflationsrate:</h3>
+<h3>amtliche Inflationsrate:</h3>
 <p id="allgemeineInflationsrate"></p>
-<h3>Inflationsraten:</h3>
+<h3>Inflationsraten der Gueterkategorien:</h3>
 <p id="Inflationsraten"></p>
 <button type="button" onclick="myFunction()">Werte anzeigen.</button>
 
 <h3>Einfluss der Gewichte (Faktor 1 der Formel):</h3>
 <p id="EinflussGewichte"></p>
-<button type="button" onclick="Faktor1()">Einfluss der Gewichte berechnen.</button>
+<h3>Einfluss der Inflation (Faktor 2 der Formel):</h3>
+<p id="EinflussInflation"></p>
+<h3>Einfluss (gesamt):</h3>
+<p id="EinflussGesamt"></p>
+<button type="button" onclick="Erklaerkomponenten()">Einfluss berechnen.</button>
 
 
 
