Index der 2 stärksten Kategorien (pos und neg) hinzugefügt

--- a/app/index.html
+++ b/app/index.html
@@ -14,16 +14,13 @@
 <p id="Inflationsraten"></p>
 <button type="button" onclick="myFunction()">Werte anzeigen.</button>
 
-<h3>Einfluss der Gewichte (Faktor 1 der Formel):</h3>
-<p id="EinflussGewichte"></p>
-<h3>Einfluss der Inflation (Faktor 2 der Formel):</h3>
-<p id="EinflussInflation"></p>
 <h3>Einfluss (gesamt):</h3>
 <p id="EinflussGesamt"></p>
-<button type="button" onclick="Erklaerkomponenten()">Einfluss berechnen.</button>
-
-
-
+<h3>positiver Einfluss:</h3>
+<p id="posImpact"></p>
+<h3>negativer Einfluss:</h3>
+<p id="negImpact"></p>
+<button type="button" onclick="myfunction2()">Einfluss berechnen.</button>
 
 <script src="app.js"></script>
 </body>
