Generierung des Erklärtextes hinzugefügt (bei amtl. gleich pers. noch nicht richtig)

--- a/app/index.html
+++ b/app/index.html
@@ -10,16 +10,19 @@
 <p id="persönlicheGewichte"></p>
 <h3>amtliche Inflationsrate:</h3>
 <p id="allgemeineInflationsrate"></p>
+<h3>persoenliche Inflationsrate:</h3>
+<p id="persoenlicheInflationsrate"></p>
 <h3>Inflationsraten der Gueterkategorien:</h3>
 <p id="Inflationsraten"></p>
 <button type="button" onclick="myFunction()">Werte anzeigen.</button>
 
 <h3>Einfluss (gesamt):</h3>
 <p id="EinflussGesamt"></p>
-<h3>positiver Einfluss:</h3>
+<h3>Kategorien mit staerkstem positivem Einfluss:</h3>
 <p id="posImpact"></p>
-<h3>negativer Einfluss:</h3>
+<h3>Kategorien mit staerkstem negativen Einfluss:</h3>
 <p id="negImpact"></p>
+<p id="text"></p>
 <button type="button" onclick="myfunction2()">Einfluss berechnen.</button>
 
 <script src="app.js"></script>
