beide Erklärtexte (bei amtl. gleich pers. Logik noch nicht richtig)

--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
 <h3>Kategorien mit staerkstem negativen Einfluss:</h3>
 <p id="negImpact"></p>
 <p id="text"></p>
+<p id="text2"></p>
 <button type="button" onclick="myfunction2()">Einfluss berechnen.</button>
 
 <script src="app.js"></script>
