Input & Buttons die später in der Mehrbox sein werden hinzugefügt.

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,35 @@
 <p id="text2"></p>
 <button type="button" onclick="myfunction2()">Einfluss berechnen.</button>
 
+<div class="small-4 cell">
+    <label for="adj-input-1" class="text-left middle">Gas</label>
+</div>
+<div class="small-8 cell right testi-test">
+    <button class="adj-btn dec-adj-btn" tabindex="-1">-</button>
+    <input type="text" class="adj-input" id="adj-input-1" name="adj-input-1" maxlength="6" size="6"
+        inputmode="decimal" pattern="number" data-validator="rest">
+    <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
+</div>
+<div class="small-4 cell">
+    <label for="adj-input-2" class="text-left middle">&nbsp;</label>
+</div>
+<div class="small-8 cell right testi-test">
+    <button class="adj-btn dec-adj-btn" tabindex="-1">-</button>
+    <input type="text" class="adj-input" id="adj-input-2" name="adj-input-2" maxlength="6" size="6"
+        inputmode="decimal" pattern="number" data-validator="rest">
+    <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
+</div>
+<div class="small-4 cell">
+    <label for="adj-input-3" class="text-left middle">&nbsp;</label>
+</div>
+<div class="small-8 cell right testi-test">
+    <button class=" adj-btn dec-adj-btn" tabindex="-1">-</button>
+    <input type="text" class="adj-input" id="adj-input-3" name="adj-input-3" maxlength="6" size="6"
+        inputmode="decimal" pattern="number" data-validator="rest">
+    <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
+</div>
+
+
 <script src="app.js"></script>
 </body>
 </html>
