Interaktion mit Eingabefeldern eingebaut. Inflationsrate mit neuem Eingabearray umgesetzt.

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 <button type="button" onclick="myfunction2()">Einfluss berechnen.</button>
 
 <div class="small-4 cell">
-    <label for="adj-input-1" class="text-left middle">Gas</label>
+    <label id="adj-cat-1" for="adj-input-1" class="text-left middle">&nbsp;</label>
 </div>
 <div class="small-8 cell right testi-test">
     <button class="adj-btn dec-adj-btn" tabindex="-1">-</button>
@@ -36,7 +36,7 @@
     <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
 </div>
 <div class="small-4 cell">
-    <label for="adj-input-2" class="text-left middle">&nbsp;</label>
+    <label id="adj-cat-2" for="adj-input-2" class="text-left middle">&nbsp;</label>
 </div>
 <div class="small-8 cell right testi-test">
     <button class="adj-btn dec-adj-btn" tabindex="-1">-</button>
@@ -45,7 +45,7 @@
     <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
 </div>
 <div class="small-4 cell">
-    <label for="adj-input-3" class="text-left middle">&nbsp;</label>
+    <label id="adj-cat-3" for="adj-input-3" class="text-left middle">&nbsp;</label>
 </div>
 <div class="small-8 cell right testi-test">
     <button class=" adj-btn dec-adj-btn" tabindex="-1">-</button>
@@ -54,6 +54,7 @@
     <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
 </div>
 
+<button type="button" onclick="myfunction3()">Einfluss mit neuen Werten berechnen.</button>
 
 <script src="app.js"></script>
 </body>
