--- a/app/index.html
+++ b/app/index.html
@@ -30,28 +30,28 @@
     <label id="adj-cat-1" for="adj-input-1" class="text-left middle">&nbsp;</label>
 </div>
 <div class="small-8 cell right testi-test">
-    <button class="adj-btn dec-adj-btn" tabindex="-1">-</button>
+    <button class="adj-btn dec-adj-btn" id="dec-adj-btn-1" tabindex="-1">-</button>
     <input type="text" class="adj-input" id="adj-input-1" name="adj-input-1" maxlength="6" size="6"
         inputmode="decimal" pattern="number" data-validator="rest">
-    <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
+    <button class="adj-btn inc-adj-btn" id="inc-adj-btn-1" tabindex="-1">+</button>
 </div>
 <div class="small-4 cell">
     <label id="adj-cat-2" for="adj-input-2" class="text-left middle">&nbsp;</label>
 </div>
 <div class="small-8 cell right testi-test">
-    <button class="adj-btn dec-adj-btn" tabindex="-1">-</button>
+    <button class="adj-btn dec-adj-btn" id="dec-adj-btn-2" tabindex="-1">-</button>
     <input type="text" class="adj-input" id="adj-input-2" name="adj-input-2" maxlength="6" size="6"
         inputmode="decimal" pattern="number" data-validator="rest">
-    <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
+    <button class="adj-btn inc-adj-btn" id="inc-adj-btn-2" tabindex="-1">+</button>
 </div>
 <div class="small-4 cell">
     <label id="adj-cat-3" for="adj-input-3" class="text-left middle">&nbsp;</label>
 </div>
 <div class="small-8 cell right testi-test">
-    <button class=" adj-btn dec-adj-btn" tabindex="-1">-</button>
+    <button class=" adj-btn dec-adj-btn" id="dec-adj-btn-3" tabindex="-1">-</button>
     <input type="text" class="adj-input" id="adj-input-3" name="adj-input-3" maxlength="6" size="6"
         inputmode="decimal" pattern="number" data-validator="rest">
-    <button class="adj-btn inc-adj-btn" tabindex="-1">+</button>
+    <button class="adj-btn inc-adj-btn" id="inc-adj-btn-3" tabindex="-1">+</button>
 </div>
 
 <button type="button" onclick="myfunction3()">Einfluss mit neuen Werten berechnen.</button>
